<resources>
    <string name="title_buses">Járatok</string>
    <string name="title_profile">Profil</string>
    <string name="bus_status_message">Elindult</string>
    <string name="bus_status_message_driver_mode">Indulás!</string>

    <string name="inactive_bus_message">A busz még nem indult el.</string>
    <string name="active_bus_message">A busz már elindult.</string>
    <string name="no_bus">Nincs megjelenítendő járat</string>
    <string name="bus_became_inactive">A járat megérkezett.</string>

    <string name="login_button">Bejelentkezés</string>
    <string name="notification">Értesítések kezelése</string>
    <string name="notification_title">Jelzések</string>
    <string name="notification_subtitle">Értesítés küldése a kedvenc járatok indulásakor.</string>
    <string name="notification_buses">Kedvenc járatok</string>
    <string name="notification_text">Nézze meg a járat jelenlegi helyzetét.</string>
    <string name="notification_disabled">Engedélyezze az értesítéseket.</string>
    <string name="gps_needed">Engedélyezze a helymeghatározást.</string>
    <string name="logout">Kilépés</string>
    <string name="reset_bus_status">Busz visszaállítása</string>
    <string name="website">Weboldal</string>
    <string name="contact">Kapcsolat</string>
    <string name="notification_channelId">departure_notification</string>
    <string name="notification_channelName">Járatok indulása</string>

    <string name="contact_title">Kapcsolatfelvétel célja</string>
    <string name="contact_business">Ügyintézés</string>
    <string name="contact_feedback">Végh Busz alkalmazás visszajelzés</string>
    <string name="contact_no_email_client">Nincs email kliens telepítve.</string>

    <string name="login_error">Hiba a bejelentkezés közben.</string>
    <string name="network_error">Nincs internetkapcsolat.</string>
    <string name="bus_start_error">Hiba a járat indítása közben.</string>
    <string name="buses_load_error">Hiba a járatok megjelenítése közben.</string>
    <string name="login_interrupted">Bejelentkezés megszakítva.</string>
    <string name="error">Hiba!</string>

    <string name="end_drive">Befejezés</string>
    <string name="end_drive_question">Biztosan befejezi a járatot?</string>
    <string name="end_drive_title">Járat befejezése</string>
    <string name="cancel_message">Mégse</string>

    <string name="map_arrival">Várható érkezés</string>
    <string name="map_departure">Indulás</string>
    <string name="map_time_default">–</string>

    <!-- Mock text -->
    <string name="bus_name_mock">Járat 1</string>
    <string name="bus_start_time_mock">12:00</string>
    <string name="bus_start_time_counter_mock">00:00</string>
    <string name="bus_start_time_conter_label">Eltelt idő</string>

    <string name="dash">—</string>
    <string name="fav_button">fav</string>
    <string name="reset_status_button">reset_status</string>
    <string name="login_background">login_background</string>
    <string name="vb_logo">Logo</string>
    <string name="user_name_mock">Sam Smith</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="notification_settings_fav_icon">notification_settings_fav_icon</string>
    <string name="notification_bar_mock_text">Harman járat elindult.</string>
    <string name="internet_status_mock_text">Nincs internetkapcsolat.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
