<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_height="match_parent"
                                                   android:layout_width="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map_buses"
              tools:context=".view.user.MapBusesFragment"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <FrameLayout android:layout_width="160dp"
                 android:layout_height="55dp"
                 android:id="@+id/map_buses_label_container"
                 android:background="@drawable/round_textview_transparent_navbar_gray"
                 android:layout_marginRight="24dp" android:layout_marginEnd="24dp" android:layout_marginBottom="24dp"
                 app:layout_constraintBottom_toBottomOf="@id/map_buses" app:layout_constraintEnd_toEndOf="parent"
                 android:visibility="invisible">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:gravity="center">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_gravity="start|center_vertical">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/bus_name_mock"
                          android:id="@+id/map_buses_name"
                          android:textAlignment="center"
                          android:textSize="18sp"
                          android:textStyle="bold"
                          android:layout_gravity="top"
                          android:textColor="@color/white"/>
            </LinearLayout>

            <View android:layout_width="1dp"
                  android:layout_height="match_parent"
                  android:background="@color/whiteTransparent"
                  android:layout_margin="12dp">
            </View>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_gravity="end|center_vertical">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/map_departure"
                          android:textAlignment="center"
                          android:textSize="14sp"
                          android:layout_gravity="top"
                          android:textColor="@color/white"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="bottom"
                          android:textAlignment="center"
                          android:textStyle="bold"
                          android:textSize="15sp"
                          android:id="@+id/map_buses_departure"
                          android:text="@string/map_time_default"
                          android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>